--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -36,26 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_DhmnSN-NRQYsyQPEFzu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get api key from your .env file\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "API_KEY = os.getenv('API_KEY')\n",
-    "\n",
-    "print(API_KEY)"
+    "API_KEY = os.getenv('API_KEY')\n"
    ]
   },
   {
